[package]
name = "tidal-presence"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
byteorder = "1.5"
uuid = { version = "1", features = ["v4"] }